@@ -18,5 +18,5 @@ TF_OTHER=Other
 TF_LUNCH=Lunch
 TF_TRIP=Trip
 ListTripsAndExpenses=List of trips and expenses
-ExpensesArea=Trips and exepenses area
+ExpensesArea=Trips and expenses area
 SearchATripAndExpense=Search a trip and expense
