@@ -23,6 +23,5 @@ ListTripsAndExpenses = Lijst van de reis- en onkosten
 
 // START - Lines generated via autotranslator.php tool (2011-10-10 01:37:25).
 // Reference language: en_US -> nl_NL
-ExpensesArea=Uitstapjes en exepenses gebied
 SearchATripAndExpense=Zoek een reis en kosten
 // STOP - Lines generated via autotranslator.php tool (2011-10-10 01:41:40).
