@@ -31,6 +31,5 @@ ListTripsAndExpenses=Geziler ve harcamalar listesi
 // START - Lines generated via autotranslator.php tool (2011-10-09 13:54:25).
 // Reference language: en_US -> tr_TR
 TripsAndExpensesStatistics=Gezi ve giderleri istatistikleri
-ExpensesArea=Gezileri ve exepenses alanı
 SearchATripAndExpense=Bir gezi ve gider ara
 // STOP - Lines generated via autotranslator.php tool (2011-10-09 13:54:39).
